Modificacion en la url de las imagenes para accesibilidad de github

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="testimonial__box" id="daniel-box">
             <div class="testimonial__box--header">
                 <div class="header__profile">
-                    <img src="/images/image-daniel.jpg" alt="">
+                    <img src="images/image-daniel.jpg" alt="">
                 </div>
                 <div class="header__info">
                     <span class="header__info--name">Daniel Clifford</span>
@@ -27,7 +27,7 @@
         <div class="testimonial__box" id="jonathan-box">
             <div class="testimonial__box--header">
                 <div class="header__profile">
-                    <img src="/images/image-jonathan.jpg" alt="">
+                    <img src="images/image-jonathan.jpg" alt="">
                 </div>
                 <div class="header__info">
                     <span class="header__info--name">Jonathan Walters</span>
@@ -43,7 +43,7 @@
         <div class="testimonial__box" id="jeanette-box">
             <div class="testimonial__box--header">
                 <div class="header__profile">
-                    <img src="/images/image-jeanette.jpg" alt="">
+                    <img src="images/image-jeanette.jpg" alt="">
                 </div>
                 <div class="header__info">
                     <span class="header__info--name">Jeanette Harmon</span>
@@ -58,7 +58,7 @@
         <div class="testimonial__box" id="patrick-box">
             <div class="testimonial__box--header">
                 <div class="header__profile">
-                    <img src="/images/image-patrick.jpg" alt="">
+                    <img src="images/image-patrick.jpg" alt="">
                 </div>
                 <div class="header__info">
                     <span class="header__info--name">Patrick Abrams</span>
@@ -73,7 +73,7 @@
         <div class="testimonial__box" id="kira-box">
             <div class="testimonial__box--header">
                 <div class="header__profile">
-                    <img src="/images/image-kira.jpg" alt="">
+                    <img src="images/image-kira.jpg" alt="">
                 </div>
                 <div class="header__info">
                     <span class="header__info--name">Kira Whittle</span>
